# gisang

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/data/: asos_download_2024_2025_q1.yaml  asos_download_q1_2025.yaml  asos_download_v1.yaml  aws_download_v1.yaml  dataset_asos_aws_v1.yaml  dataset_multitarget_v1.yaml  dataset_real_2024_2025_q1_richer_multitarget.yaml  dataset_real_2024q4_2025q1_richer_multitarget.yaml  dataset_real_multitarget_v1.yaml  dataset_real_q1_2025_multitarget.yaml  dataset_real_v1.yaml  dataset_v1.yaml  era5_download_2024.yaml  era5_download_2024_2025_q1.yaml  era5_download_2024_q4.yaml  era5_download_q1_2025.yaml  era5_download_v1.yaml
configs/eval/: metrics.yaml
configs/model/: baseline.yaml  ridge_v1.yaml  seasonal_persistence_v1.yaml  tft_v1.yaml
configs/train/: train_real_gpu_v1.yaml  train_real_q4q1_richer_gpu_v1.yaml  train_real_v1.yaml  train_v1.yaml
configs/v2/experiments/: v2_humidity_lgbm.yaml  v2_humidity_ridge.yaml  v2_humidity_tft.yaml  v2_temp_lgbm.yaml  v2_temp_ridge.yaml  (+3 more)
docs/: V2_plan.md
scripts/: run_eval.sh  run_predict.sh  run_prepare_data.sh  run_train.sh  run_v2_humidity_lgbm.sh  run_v2_humidity_ridge.sh  run_v2_humidity_tft.sh  run_v2_temp_lgbm.sh  run_v2_temp_ridge.sh  run_v2_temp_seasonal_persistence.sh  run_v2_temp_tft.sh
src/weather_korea_forecast/: __init__.py
tests/: conftest.py  test_dataset_tft.py  test_observation_sources.py  test_station_extraction.py  test_time_alignment.py  test_train_inference.py  test_v2_pipeline.py
(+46 files in other folders)
